personal website  and content
Updated the personal website to include additional sections for projects, education, hobbies, and achievements. Enhanced content to better showcase skills and interests.

--- a/index.html
+++ b/index.html
@@ -4,41 +4,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hardeek | Personal Website</title>
-    <meta name="description" content="Hardeek | Personal website of Hardeek, a gamer, cricket fan, and aspiring web developer.">
-    <meta name="keywords" content="Hardeek, Hardeek website, Hardeek personal, Hardeek web developer, cricket fan, gamer">
+    <meta name="description" content="Hardeek | Personal website of Hardeek, showcasing skills, projects, hobbies, and contact info.">
+    <meta name="keywords" content="Hardeek, personal website, portfolio, web developer, gamer, cricket, sports, studies, tech projects">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<nav>
+    <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#hobbies">Hobbies</a></li>
+        <li><a href="#achievements">Achievements</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
+<!-- HERO SECTION -->
 <header class="hero">
     <h1>Hi, I'm Hardeek 👋</h1>
-    <p>A gamer, cricket fan & aspiring web developer.</p>
-    <a href="#about">Explore</a>
+    <p>A gamer, aspiring web developer, cricket enthusiast & tech lover.</p>
+    <a href="#about">Learn More</a>
 </header>
 
-<section id="about">
-    <h2>About Hardeek</h2>
+<!-- ABOUT SECTION -->
+<section id="about" class="section">
+    <h2>About Me</h2>
     <p>
-        Hello! I am Hardeek. I love gaming, cricket, and creating digital projects. 
-        I am learning web development and working to share my creativity with the world.
+        Hello! I am Hardeek. I love gaming, cricket, learning web development, and exploring technology. 
+        I create projects to improve my skills and share them with the world. I am passionate about coding, AI, 
+        sports, and building tools that are useful and fun.
     </p>
 </section>
 
-<section id="skills">
-    <h2>Hardeek's Skills</h2>
+<!-- SKILLS SECTION -->
+<section id="skills" class="section">
+    <h2>My Skills</h2>
     <ul>
         <li>HTML & CSS</li>
-        <li>JavaScript basics</li>
-        <li>Gaming</li>
-        <li>AI & future tech projects</li>
+        <li>JavaScript Basics & DOM Manipulation</li>
+        <li>Problem Solving & Logical Thinking</li>
+        <li>AI & Tech Exploration</li>
+        <li>Gaming & Strategy Analysis</li>
+        <li>Cricket Knowledge & Sports Strategy</li>
     </ul>
 </section>
 
-<section id="contact">
-    <h2>Contact Hardeek</h2>
-    <p>Email: hardeekkumar3c@gmail.com</p>
+<!-- PROJECTS SECTION -->
+<section id="projects" class="section">
+    <h2>Projects</h2>
+    <ul>
+        <li><strong>Personal Website:</strong> This website to showcase my skills and portfolio.</li>
+        <li><strong>Simple JS Game:</strong> A game built using HTML, CSS, and JavaScript.</li>
+        <li><strong>Tech Blog:</strong> Blog about my coding journey and tutorials.</li>
+        <li><strong>Mini AI Projects:</strong> Exploring AI tools and simple projects.</li>
+        <li><strong>Cricket Statistics Tracker:</strong> Personal project to track cricket scores and stats.</li>
+    </ul>
 </section>
 
+<!-- EDUCATION SECTION -->
+<section id="education" class="section">
+    <h2>Education</h2>
+    <ul>
+        <li>Currently studying</li>
+        <li>Currently Learning Web Development & AI</li>
+        <li>Self-learning projects in programming and technology</li>
+        <li>Studying cricket statistics and sports strategies</li>
+    </ul>
+</section>
+
+<!-- HOBBIES SECTION -->
+<section id="hobbies" class="section">
+    <h2>Hobbies & Interests</h2>
+    <ul>
+        <li>Cricket (Playing & Analyzing Matches)</li>
+        <li>Other Sports (Football, Badminton)</li>
+        <li>Gaming (Strategy,Action & Adventure games)</li>
+        <li>Learning and Studying Web Development, AI, and Tech</li>
+        <li>Exploring new tech tools and applications</li>
+    </ul>
+</section>
+
+<!-- ACHIEVEMENTS SECTION -->
+<section id="achievements" class="section">
+    <h2>Achievements</h2>
+    <ul>
+        <li>Created my first personal website using HTML & CSS</li>
+        <li>Completed multiple small coding projects in JavaScript</li>
+        <li>Built a Cricket Statistics Tracker project</li>
+        <li>Improved problem-solving and logical thinking through coding challenges</li>
+        <li>Developed skills in AI exploration and technology projects</li>
+    </ul>
+</section>
+
+<!-- CONTACT SECTION -->
+<section id="contact" class="section">
+    <h2>Contact Me</h2>
+    <p>If you want to reach me, here’s how:</p>
+    <ul>
+        <li>Email: hardeekkumar3c@gmail.com</li>
+        <li>GitHub: <a href="https://github.com/Hard1kkumar777" target="_blank">Hard1kkumar777</a></li>
+        <!-- Optional: Add LinkedIn, Instagram, or other social links -->
+    </ul>
+</section>
+
+<!-- FOOTER -->
 <footer>
     <p>© 2026 Hardeek. All rights reserved.</p>
 </footer>
