--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hardeek | Personal Website</title>
+    <!--Google verification-->
+    meta name="google-site-verification" content="d7bc0cb03d1cb38e"/>
     <meta name="description" content="Hardeek | Personal website of Hardeek, showcasing skills, projects, hobbies, and contact info.">
     <meta name="keywords" content="Hardeek, personal website, portfolio, web developer, gamer, cricket, sports, studies, tech projects">
     <link rel="stylesheet" href="style.css">
@@ -117,3 +119,4 @@
 
 </body>
 </html>
+
