Update Google verification and refine HTML structure
Updated Google site verification meta tag and improved content structure.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hardeek | Personal Website</title>
     <!--Google verification-->
-    meta name="google-site-verification" content="googled7bc0cb03d1cb38e"/>
+    <meta name="google-site-verification" content="NZUVlV_eWl3bt1Xgau-BtSZjfTwmvk4RhS6OE8NFHcg" />
     <meta name="description" content="Hardeek | Personal website of Hardeek, showcasing skills, projects, hobbies, and contact info.">
     <meta name="keywords" content="Hardeek, personal website, portfolio, web developer, gamer, cricket, sports, studies, tech projects">
     <link rel="stylesheet" href="style.css">
@@ -119,6 +119,7 @@
 
 </body>
 </html>
+
 
 
 
