--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-<nav>
+<nav class="sticky-navbar">
+    <div class="nav-left">Sticky Navbar</div>
+
     <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
@@ -20,6 +22,9 @@
         <li><a href="#achievements">Achievements</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
+
+    <button id="themeToggle">🌙</button>
+</nav>
 </nav>
 
 <!-- HERO SECTION -->
@@ -110,6 +115,20 @@
     </ul>
 </section>
 
+<script>
+  const toggle = document.getElementById("themeToggle");
+
+  toggle.addEventListener("click", () => {
+    document.body.classList.toggle("dark");
+
+    if (document.body.classList.contains("dark")) {
+      toggle.textContent = "☀️";
+    } else {
+      toggle.textContent = "🌙";
+    }
+  });
+</script>
+
 <!-- FOOTER -->
 <footer>
     <p>© 2026 Hardeek. All rights reserved.</p>
@@ -117,9 +136,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
