--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <nav class="sticky-navbar">
-    <div class="nav-left">Sticky Navbar</div>
+    <div class="nav-left"></div>
 
     <ul>
         <li><a href="#about">About</a></li>
@@ -136,3 +136,4 @@
 
 </body>
 </html>
+
