Fix HTML structure and update navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-<nav class="sticky-navbar">
+<nav id="navbar"
+class="sticky-navbar">
 
     <ul>
         <li><a href="#about">About</a></li>
@@ -24,7 +25,7 @@
 
     <button id="themeToggle">🌙</button>
 </nav>
-</nav>
+<div id="nav-space"></div>
 
 <!-- HERO SECTION -->
 <header class="hero">
@@ -135,5 +136,6 @@
 
 </body>
 </html>
+
 
 
